<resources>
  <string name="app_name">lecture28Demo</string>
  <string name="main_activity_image">placeholder image</string>
  <string name="main_activity_input_hint">Name</string>
  <string name="main_activity_input_title">Title</string>
  <string name="main_activity_submit_button">Submit</string>
  <string name="submitted_confirmation">Submitted!</string>
  <string name="order_form_title">Order Form</string>
  <string name="order_form_info">Order Form Info</string>
  <string name="settings_button_description">settings</string>
  <string name="nickname_hint">Name</string>
  <string name="nickname_title">Nickname</string>
  <string name="save_button">Save</string>
  <string name="no_product_name">No Product Name</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="blank_product_name">Blank Product Name</string>
  <string name="product_categories">product categories</string>
  <string name="name">Name</string>
  <string name="price">Price</string>
  <string name="save_product">Save Product</string>
  <string name="product_contacts">contacts</string>
  <string name="add_product">Add Product</string>
  <string name="sign_up_page">Sign Up Page</string>
  <string name="email_hint">Email</string>
  <string name="password">Password</string>
  <string name="sing_up">Sign Up</string>
  <string name="verify_account_title">Verify Account</string>
  <string name="verify">Verify</string>
  <string name="verification_number">Verification Number</string>
  <string name="login_page">Login Page</string>
  <string name="login">Login</string>
  <string name="logout">Logout</string>
    <string name="speak">Speak</string>
</resources>
